# myprayer

./: README.md  myprayer.py  pyproject.toml
myprayer/: config.py  constants.py  day.py  enums.py  main.py  month.py  utils.py
myprayer/api/: client.py  day.py  month.py
myprayer/cli/: config.py  constants.py  day.py  enums.py  main.py  output.py
