[tool.poetry]
name = "myprayer"
version = "0.9.0"
description = ""
authors = ["YoussefAswad <85849220+YoussefAswad@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
rich = "^13.6.0"
requests = "^2.31.0"
inquirer = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
myprayer = "myprayer.main:app"
