[tool.poetry]
name = "myprayer"
version = "2.0.3"
description = "A CLI tool to get prayer times"
authors = ["YoussefAswad <85849220+YoussefAswad@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.9.0"
rich = "^13.6.0"
requests = "^2.31.0"
inquirer = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
myprayer = "myprayer.cli.main:app"
